--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,18 @@
   padding: 2rem;
   text-align: center;
 }
+@font-face {
+  font-family: 'PB Melon';
+  src: url('./assets/fonts/MyCustomFont.ttf') format('truetype');
+}
+
+body {
+  font-family: 'PB Melon', sans-serif;
+}
+button {
+  font-family: 'PB Melon', sans-serif;
+  font-size: 16px;
+}
 
 .logo {
   height: 6em;
